fix(vertical-timeline): override animation making unintentional bounces on small devices

--- a/src/views/HomePage/Styles/SectionsStyles/projects.style.css
+++ b/src/views/HomePage/Styles/SectionsStyles/projects.style.css
@@ -1,8 +1,4 @@
-.slick-prev:before,
-.slick-next:before {
-  color: red !important;
-}
-
+/* Override carousel arrows */
 .carousel--arrow::before {
   content: unset;
 }
@@ -11,4 +7,28 @@
   background-color: white;
   height: 50px;
   width: 50px;
+}
+
+/* Override vertical timeline animation on small screens */
+@media only screen and (max-width: 1169px) {
+  .vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
+    visibility: visible;
+    animation: timeline-slide 0.4s;
+  }
+}
+
+@keyframes timeline-slide {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+
+  60% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
